hphp/test/zend/bad/ext-json/bug45791.php
<?php

var_dump(json_decode('{"zero": 0e0}'));

?>